First package complete! Main menu!

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
+EditorStartupMap=/Game/_LEVEL/MainMenu.MainMenu
+GameDefaultMap=/Game/_LEVEL/MainMenu.MainMenu
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -38,5 +40,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
