--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -44,6 +44,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Fire",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElavation",Key=MouseY,Scale=1.000000)
++AxisMappings=(AxisName="Left Track Throttle",Key=A,Scale=1.000000)
++AxisMappings=(AxisName="Right Track Throttle",Key=C,Scale=-0.500000)
++AxisMappings=(AxisName="Left Track Throttle",Key=Z,Scale=-0.500000)
++AxisMappings=(AxisName="Right Track Throttle",Key=D,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
