--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -48,6 +48,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Right Track Throttle",Key=C,Scale=-0.500000)
 +AxisMappings=(AxisName="Left Track Throttle",Key=Z,Scale=-0.500000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=U,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=J,Scale=-0.500000)
++AxisMappings=(AxisName="TurnRight",Key=K,Scale=1.000000)
++AxisMappings=(AxisName="TurnRight",Key=H,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
