--- a/BattleTank/.gitignore
+++ b/BattleTank/.gitignore
@@ -3,7 +3,8 @@
 
 # Visual Studio 2015 database file
 *.VC.db
-
+BattleTank.VC.VC.opendb
+BattleTank/.vs/
 # Compiled Object files
 *.slo
 *.lo
@@ -75,6 +76,4 @@ Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
-
-# Content
-Content/Startercontent
+ 
